ghost/admin/app/styles/layouts/editor.css
/* Editor /ghost/editor/
/* ---------------------------------------------------------- */

.editor-options .dropdown-menu {
    top: 35px;
    right: 0;
    left: auto;
}


/* Tags input CSS (TODO: needs some revision)
/* ------------------------------------------------------ */
.tags-input-list {
    display: flex;
    flex-wrap: wrap;
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.tags-input-list li {
    flex: 1 0 auto;
}

.label-tag {
    margin-right: 0.3em;
    padding: 0.2em 0.6em 0.3em;
    color: var(--lightgrey);
    font-weight: 300;
    text-align: center;
    background-color: var(--darkgrey);
    border-radius: 0.25em;
}

.label-tag.highlight {
    color: #fff;
    background: var(--midgrey);
}

.tag-input {
    margin-top: 5px;
    border: none;
    font-weight: 300;
    cursor: default;
}

.tag-input:focus {
    outline: 0;
}

.publish-bar-actions {
    flex: 1 0 auto;
    align-self: auto;
    display: flex;
    text-align: right;
}

.post-settings {
    position: relative;
    z-index: 1000;
    display: inline-block;
    padding: 15px 0 15px 15px;
    color: var(--midgrey);
    line-height: 0;
    transition: all 0.15s ease-out 0s;
}

.post-settings:hover,
.post-settings.active {
    color: var(--darkgrey);
}

.post-settings svg {
    width: 16px;
    height: 16px;
    fill: var(--midgrey);
}

.post-settings:hover svg,
.post-settings.active svg {
    fill: var(--darkgrey);
}

.post-settings-menu .dropdown-menu {
    top: auto;
    right: 100%;
    bottom: 100%;
    left: auto;
}

.post-view-link {
    position: absolute;
    top: 1px;
    right: 0;
    font-size: 1.3rem;
}

.post-view-link svg {
    display: inline;
    width: 10px;
    height: 10px;
    fill: var(--blue);
}


/* Post settings meta
/* ---------------------------------------------------------- */

/* Google SERP Preview */
.seo-preview {
    font-family: Arial, sans-serif;
    background: #fff;
    padding: 10px 12px;
}

.seo-preview-title {
    color: #1e0fbe;
    font-size: 1.8rem;
    line-height: 2.16rem;
    text-overflow: ellipses;
    word-wrap: break-word;

    -webkit-text-overflow: ellipsis;
}

.seo-preview-link {
    margin: 1px 0 2px 0;
    color: #006621;
    font-size: 1.3rem;
    line-height: 1.6rem;
    word-wrap: break-word;
}

.seo-preview-description {
    color: #545454;
    font-size: 1.3rem;
    line-height: 1.4;
    word-wrap: break-word;
}

/* Facebook Card Preview */
.gh-og-preview {
    background: #fff;
    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1) inset,
    0 -1px 0 0 rgba(0, 0, 0, 0.06) inset,
    0 1px 4px rgba(0, 0, 0, 0.1);
}

.gh-og-preview-image {
    width: 100%;
    height: 160px;
    background-size: cover;
    background-position: center center;
}

.gh-og-preview-content {
    padding: 10px 12px;
}

.gh-og-preview-title {
    max-height: 110px;
    overflow: hidden;
    margin-bottom: 5px;
    font-family: Georgia, serif;
    font-size: 18px;
    line-height: 22px;
    font-weight: 500;
    word-wrap: break-word;
}

.gh-og-preview-description {
    max-height: 80px;
    overflow: hidden;
    font-size: 12px;
    line-height: 16px;
    letter-spacing: -0.1px;
}

.gh-og-preview-footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.gh-og-preview-footer-left {
    overflow: hidden;
    padding-top: 18px;
    color: #90949c;
    font-size: 11px;
    line-height: 11px;
    letter-spacing: -0.1px;
    text-transform: uppercase;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.gh-og-preview-footer-left-divider {
    padding: 0 5px;
}

.gh-og-preview-footer-author {
    color: #3b5998;
}


/* Twitter Card Preview */
.gh-twitter-preview {
    overflow: hidden;
    border-width: 1px;
    border-style: solid;
    border-color: #e1e8ed;
    color: #292f33;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 1.4rem;
    line-height: 1.3em;
    background: #fff;
    border-radius: 0.42857em;

    -webkit-font-smoothing: antialiased;
}

.gh-twitter-preview-image {
    width: 100%;
    height: 160px;
    background-size: cover;
    background-position: center center;
}

.gh-twitter-preview-content {
    padding: 12px 14px;
}

.gh-twitter-preview-title {
    max-height: 1.3em;
    overflow: hidden;
    margin: 0 0 0.15em;
    font-weight: bold;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.gh-twitter-preview-description {
    overflow: hidden;
    margin-top: 0.32333em;
}

.gh-twitter-preview-footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 0.35em;
}

.gh-twitter-preview-footer-left {
    max-height: 1.3em;
    overflow: hidden;
    color: #8899a6;
    text-transform: lowercase;
    text-overflow: ellipsis;
    white-space: nowrap;
}




/* NEW editor
/* ---------------------------------------------------------- */

.gh-main > section.gh-editor-fullscreen {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    width: 100%;
    height: 100%;
    background-color: white;
}

.gh-editor-header {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;
    padding: 0 30px;
}
@media (max-width: 750px) {
    .gh-editor-header {
        padding: 0 4vw;
    }
}

.gh-editor-header-small {
    z-index: 100;
    height: 43px;
    padding: 0;
    padding-left: 15px;
    border-bottom: var(--lightgrey) 1px solid;
    background-color: #fff;
}

.gh-editor-header-small .gh-publishmenu {
    line-height: 0;
}

.gh-editor-header-small .post-settings {
    padding: 13px 15px;
}

.gh-editor-status {
    color: var(--midgrey);
    font-size: 1.3rem;
    font-weight: 300;
}

.gh-editor-container {
    position: absolute;
    z-index: 0;
    width: 100%;
    height: 100%;
    overflow-y: auto;
    padding: 10vw 4vw;
}

.gh-editor-inner {
    height: 100%;
    max-width: 760px;
    margin: 0 auto;
}
/* ... */

